@@ -1,7 +1,7 @@
 Package: basefun
 Title: Infrastructure for Computing with Basis Functions
-Version: 0.0-36
-Date: 2017-03-01
+Version: 0.0-37
+Date: 2017-04-04
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org")  
 Description: Some very simple infrastructure for basis functions.
@@ -9,8 +9,8 @@ Depends: variables (>= 0.0-30)
 Imports: stats, polynom, Matrix, orthopolynom, methods
 License: GPL-2
 NeedsCompilation: yes
-Packaged: 2017-03-01 13:04:26 UTC; hothorn
+Packaged: 2017-04-05 15:32:49 UTC; hothorn
 Author: Torsten Hothorn [aut, cre]
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
 Repository: CRAN
-Date/Publication: 2017-03-01 19:05:43
+Date/Publication: 2017-04-05 15:46:09 UTC
