@@ -1,7 +1,7 @@
-b3d1db224d56ea8c93f06628c73ae926 *DESCRIPTION
+ef3d1a6493e3e4ba87e241662fc9eb32 *DESCRIPTION
 2af1830d90cb13e54f905f5293dead84 *NAMESPACE
 5f993b6d2ba607402321c21481a824a5 *R/bernstein.R
-861c7936d3a8a070a8139e93a2e02643 *R/box_bases.R
+c0f11765a4fde8c1f73289cc8de18b1f *R/box_bases.R
 020a805e92969eb4628ac2737898300a *R/cbind_bases.R
 dfaa6e61ada2f5144c1952ffddde84a8 *R/cyclic.R
 30f02e4dc9b1807fcbab770c530efc9b *R/factor.R
@@ -13,7 +13,7 @@ d59c91433a5f923ac2067047511de586 *R/legendre.R
 306bc7ed8a1b3746a0e9af255ddcd37a *R/polynomial.R
 b28a85143635108a8a27f808ccc28eff *R/utils.R
 1c9695dee7162d6e72883b552906e753 *cleanup
-263fda5e81175a569666200c42a83f02 *inst/NEWS.Rd
+454ee42c57949521070c2bfed9bdc4a3 *inst/NEWS.Rd
 8cb66017e7b800b4a368f0b658049816 *man/Bernstein_basis.Rd
 e302699142ee0fef7062985a604afd3d *man/Legendre_basis.Rd
 e346889cf14daf60e656a13dd60ac16a *man/as.basis.formula.Rd
